# tmdb-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Procfile  README.md  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  uwagi.md
config/: settings.py  urls.py
core/: __init__.py  test_views.py  views.py
lists/: admin.py  forms.py  models.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_initial.py  0003_listitem_status.py  0004_alter_listitem_status_and_more.py
lists/services/: __init__.py  list_service.py  test_list_service.py
media/: admin.py  api_urls.py  api_views.py  forms.py  models.py  test_api_views.py  urls.py  views.py
media/factories/: __init__.py  media_factory.py  test_media_factory.py
media/migrations/: 0001_initial.py  0002_initial.py  0003_alter_media_tmdb_id.py  0004_alter_media_media_type_and_more.py
media/services/: __init__.py  episode_tracking_service.py  media_service.py  test_tmdb_service.py  tmdb_service.py
media/templatetags/: __init__.py  episode_tags.py  media_tags.py
profiles/: admin.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_initial.py
profiles/services/: __init__.py  profile_service.py  test_profile_service.py
static/css/: style.css
temp_doc/: config.html  core.html  index.html  media.html  profiles.html  search.js  static.html  templates.html  users.html
temp_doc/config/: asgi.html  settings.html  urls.html  wsgi.html
temp_doc/core/: views.html
temp_doc/media/: admin.html  api_urls.html  api_views.html  apps.html  factories.html  migrations.html  models.html  (+4 more)
templates/: 400.html  403.html  404.html  500.html  base.html  index.html
tests/: conftest.py
users/: admin.py  forms.py  models.py  urls.py  views.py
(+51 files in other folders)
