[project]
name = "imdb-app"
version = "0.1.0"
description = "Web application for tracking and sharing progress in watching movies and TV series"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyright>=1.1.408",
    "ruff>=0.14.13",
    "django-stubs>=5.2.8",
]
