[project]
name = "imdb-app"
version = "0.1.0"
description = "Web application for tracking and sharing progress in watching movies and TV series"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "dj-database-url>=2.1.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.8.0",
    "django-cors-headers>=4.3.0",
    "pyright>=1.1.408",
    "ruff>=0.14.13",
    "django-stubs>=5.2.8",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "psycopg>=3.3.2",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = "--ds=config.settings"
